[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "hre-tools"
version = "0.1.1"
description = "A blazing-fast lightweight hybrid retriever optimized for searching small to medium-sized document collections."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Jared Peck", email = "jared7peck@gmail.com"}]
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
